# cargo-ws-version

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: auto-publish.yml  check-and-test.yml
src/: cargo_toml.rs  main.rs  options.rs
