[package]
name = "cargo-ws-version"
version = "1.0.0"
edition = "2021"
description = "Cargo plugin, which helps to update versions of changed cargo packages in workspace and update all dependencies in packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
git2 = { version= "0.13" }
serde = { version = "1.0.136", features = ["derive"]}
toml = "0.5"
