[package]
name = "cargo-ws-version"
version = "1.0.7"
edition = "2021"
license = "MIT"
description = "Cargo plugin, which helps to update versions of changed cargo packages in workspace and update all dependencies in packages"
repository="https://github.com/stavenko/cargo-ws-version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="cargo-ws-version"
path="src/main.rs"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
git2 = { version= "0.13" }
serde = { version = "1.0.136", features = ["derive"]}
toml = "0.5"
